fix: wrap setting formatted time in use effect to avoid rerender

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -186,9 +186,6 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
-  .isolate {
-    isolation: isolate;
-  }
   .z-10 {
     z-index: 10;
   }
